--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -25,7 +25,7 @@
   <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
       <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-      <h1 class="ms-font-su">Welcome</h1>
+      <h1 class="ms-font-su">Library Loaded</h1>
     </header>
   </body>
 </html>
