task pan aesthetic + remove unused npm scripts

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -17,7 +17,19 @@
       rel="stylesheet"
       href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.1/css/fabric.min.css"
     />
-
+    <style>
+      header {
+        margin: auto;
+      }
+      h1 {
+        text-align: center;
+      }
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    </style>
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
   </head>
@@ -25,7 +37,7 @@
   <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
       <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-      <h1 class="ms-font-su">Library Loaded</h1>
+      <h1 class="ms-font-su">Library Loaded Successfully</h1>
     </header>
   </body>
 </html>
